[package]
name = "audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#symphonia = "0.5.2"
#fundsp = "0.13.0"
hound = "3.5.0"
itertools = "0.14.0"
num-traits = "0.2.15"
rustfft = "6.1.0"
ndarray = "0.16.1"
plotters = "0.3.5"
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
approx = "0.5.1"
rand = "0.9.0"

[features]
default = ["rayon"]
